force-app/main/default/objects/Event_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user assigned to complete the task.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>