force-app/main/default/objects/Event_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The deadline for completing the task.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>