force-app/main/default/objects/Event_Task__c/fields/Event_Plan__c.field-meta.xml
<CustomField>
    <fullName>Event_Plan__c</fullName>
    <description>The event plan associated with the event task.</description>
    <label>Event Plan</label>
    <referenceTo>Event_Plan__c</referenceTo>
    <relationshipLabel>Event Tasks</relationshipLabel>
    <relationshipName>Event_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>