force-app/main/default/objects/Event_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <description>The name of the task.</description>
    <label>Task Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>