force-app/main/default/objects/Event_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Event_Plan__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Task_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>